[2단계 - 블랙잭 베팅] 뽀로로(조경찬) 미션 제출합니다. (#738)
* docs(README): 구현할 기능 목록 작성

* feat(Suit): 카드 모양에 대한 Enum 클래스 구현

* test(Denomination): 카드 숫자의 크기를 확인하는 테스트 구현

* feat(Denomination): 카드 숫자에 대한 Enum 객체 구현

* feat(CardFactory): 카드를 생성하는 기능 구현

* feat(CardDeck): 처음 카드를 초기화하는 기능 구현

* feat(CardDeck): 카드를 한 장 뽑는 기능 구현

* feat(CardHand): 카드를 받는 기능 구현

* feat(CardHand): 카드 패의 총 점수를 계산하는 기능 구현

* feat(Dealer): 카드를 셔플하는 기능 구현

* feat(Dealer): 카드 덱에서 카드를 한 장 뽑는 기능 구현

* feat(Dealer): 카드를 받는 기능 구현

* feat(Dealer): 카드의 총 점수를 계산하는 기능 구현

* feat(Dealer): 딜러가 카드를 더 받을 수 있는지 판별하는 기능 구현

* feat(Name): 이름을 검증하는 기능 구현

* feat(Player): 플레이어의 카드의 점수를 계산하는 기능 구현

* refactor(Participant): 플레이어와 딜러의 공통 기능 추상화

* feat(Hit): Hit 상태 구현

* feat(Blackjack): 블랙잭 상태 구현

* feat(Stay): Stay 상태 구현

* feat(Bust) Bust 상태 구현

* refactor: 종료된 상태에 대해 공통 로직 추상화

* feat(Hit): 카드를 뽑고 상태를 판단하는 기능 구현

* refactor(Dealer): 카드를 셔플하는 기능 변경

* docs(README): 구현할 기능 목록 추가

* feat(Player): 플레이어가 카드를 더 받을 수 있는지 판별하는 기능 구현

* feat(Players): 플레이어들을 검증하는 기능 구현

* test: 테스트 코드 중복 제거

* feat(BattingAmount): 배팅 금액을 검증하는 기능 구현

* feat(BattingAmountRepository): 배팅 금액을 기록하고 찾는 기능 구현

* feat(BlackjackGame): 블랙잭 게임을 시작하는 기능 구현

* feat(BlackjackGame): 플레이어가 패배한 경우를 확인하는 기능 구현

* feat(BlackjackGame): 플레이어가 이긴 경우를 확인하는 기능 구현

* feat(BlackjackGame): 플레이어가 딜러와 무승부인 경우를 확인하는 기능 구현

* refactor(Dealer): 딜러가 카드 셔플 전략을 가지도록 변경

* docs(README): 구현할 기능 목록 추가

* feat(BlackjackGame): 플레이어에게 카드를 추가로 지급하는 기능 구현

* feat(BlackjackGame): 딜러에게 카드를 추가로 지급하는 기능 구현

* refactor: 딜러가 카드를 뽑는 기능 변경

* refactor: 카드의 점수 객체 구현

* test(BlackjackGame): 코드 중복 제거

* feat(ProfitCalculator): 게임 참여자들의 수익을 계산하는 기능 구현

* feat(BattingAmount): 배팅 금액을 검증하는 기능 구현

* feat(GameCommand): 블랙잭 명령어를 찾는 기능 구현

* chore: 패키지 구조 변경

* feat(Converter): 문자열을 리스트로 변환하는 기능 구현

* refactor: 중복으로 사용되는 상수들을 하나의 클래스에서 관리하도록 변경

* feat(InputValidator): 게임 참가자 이름을 검증하는 기능 구현

* feat(InputView): 배팅 금액을 입력