@@ -1,61 +1,43 @@
 package blackjack.domain.participant;
 
+import org.assertj.core.api.InstanceOfAssertFactories;
 import org.junit.jupiter.api.Test;
-import org.junit.jupiter.params.ParameterizedTest;
-import org.junit.jupiter.params.provider.ValueSource;
 
-import java.util.List;
+import java.util.Collections;
 
+import static blackjack.fixture.PlayerFixture.플레이어들;
 import static org.assertj.core.api.Assertions.assertThat;
 import static org.assertj.core.api.Assertions.assertThatThrownBy;
 
 class PlayersTest {
-    @Test
-    void 플레이어의_수가_범위를_벗어날_경우_예외가_발생한다() {
-        List<String> playerNames = List.of("뽀로로", "프린", "포비", "네오", "토미", "영이", "수달");
 
-        assertThatThrownBy(() -> new Players(playerNames))
-                .isExactlyInstanceOf(IllegalArgumentException.class)
-                .hasMessageContaining("플레이어의 수는 1 ~ 6명이어야 합니다.");
+    @Test
+    void 블랙잭_게임에_참여하는_플레이어들을_알_수_있다() {
+        final Players players = 플레이어들("pobi", "jason");
+
+        assertThat(players).extracting("players", InstanceOfAssertFactories.list(Player.class))
+                .extracting("name")
+                .containsExactly("pobi", "jason");
     }
 
     @Test
-    void 플레이어의_이름이_중복될_경우_예외가_발생한다() {
-        String roro = "뽀로로";
-        String prin = "프린";
-        List<String> playerNames = List.of(roro, prin, prin);
-
-        assertThatThrownBy(() -> new Players(playerNames))
-                .isExactlyInstanceOf(IllegalArgumentException.class)
-                .hasMessageContaining("중복된 이름이 존재합니다.");
+    void 플레이어_이름_중_중복된_이름을_가지면_예외가_발생한다() {
+        assertThatThrownBy(() -> 플레이어들("pobi", "pobi"))
+                .isInstanceOf(IllegalArgumentException.class)
+                .hasMessageContaining("플레이어 이름 중 중복된 이름이 존재할 수 없습니다.");
     }
 
     @Test
-    void 플레이어들을_생성한다() {
-        List<String> playerNames = List.of("뽀로로", "프린", "포비");
-        Players players = new Players(playerNames);
-
-        List<String> result = players.getPlayerNames();
-
-        assertThat(result).containsExactlyElementsOf(playerNames);
+    void 게임에_참여하는_플레이어의_수가_1보다_작으면_예외가_발생한다() {
+        assertThatThrownBy(() -> new Players(Collections.emptyList()))
+                .isInstanceOf(IllegalArgumentException.class)
+                .hasMessageContaining("게임에 참여하는 플레이어는 1 ~ 6명이어야 합니다.");
     }
 
     @Test
-    void 인덱스로_플레이어를_찾는다() {
-        Players players = new Players(List.of("뽀로로", "프린", "포비"));
-
-        Player player = players.findPlayerByIndex(2);
-
-        assertThat(player.getName()).isEqualTo("포비");
-    }
-
-    @ParameterizedTest
-    @ValueSource(ints = {-1, 3})
-    void 인덱스가_범위를_벗어날_경우_예외가_발생한다(int invalidIndex) {
-        Players players = new Players(List.of("뽀로로", "프린", "포비"));
-
-        assertThatThrownBy(() -> players.findPlayerByIndex(invalidIndex))
-                .isExactlyInstanceOf(IllegalArgumentException.class)
-                .hasMessageContaining("인덱스가 범위를 벗어났습니다.");
+    void 게임에_참여하는_플레이어의_수가_6보다_크면_예외가_발생한다() {
+        assertThatThrownBy(() -> 플레이어들("11", "22", "33", "44", "55", "66", "77"))
+                .isInstanceOf(IllegalArgumentException.class)
+                .hasMessageContaining("게임에 참여하는 플레이어는 1 ~ 6명이어야 합니다.");
     }
 }
